--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">Map</string>
+    <string name="title_dashboard">Near Me</string>
+    <string name="title_notifications">Settings</string>
+    <string name="API_KEY">AIzaSyC0tOMfq95VqOV8505O4DbeEzH9ztGOD64</string>
 </resources>
