--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">My Application</string>
     <string name="title_home">Map</string>
     <string name="title_dashboard">Near Me</string>
-    <string name="title_notifications">Settings</string>
+    <string name="title_notifications">Perfil</string>
     <string name="API_KEY">AIzaSyC0tOMfq95VqOV8505O4DbeEzH9ztGOD64</string>
     <string name="todo">todo</string>
     <string name="password">password</string>
